force-app/main/default/objects/Charge_Type__c/Charge_Type__c.object-meta.xml
<CustomObject>
    <description>track information related to types of charges</description>
    <label>Charge Type</label>
    <nameField>
        <label>Charge Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>