force-app/main/default/objects/Charge_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>does this charge fit into a coded category?</description>
    <inlineHelpText>does this charge fit into a coded category?</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CJUMP</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Fuel Loss</fullName>
            </value>
            <value>
                <fullName>IJUMP</fullName>
            </value>
            <value>
                <fullName>NJUMP</fullName>
            </value>
            <value>
                <fullName>KJUMP</fullName>
            </value>
            <value>
                <fullName>MOPRC</fullName>
            </value>
            <value>
                <fullName>Producer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>