force-app/main/default/objects/Charge_Type__c/fields/Fuel_Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Loss_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this charge type a fuel loss charge type?</description>
    <inlineHelpText>is this charge type a fuel loss charge type?</inlineHelpText>
    <label>Fuel Loss Type</label>
    <type>Checkbox</type>
</CustomField>