force-app/main/default/objects/Charge_Type__c/fields/HOU_ID__c.field-meta.xml
<CustomField>
    <fullName>HOU_ID__c</fullName>
    <label>HOU ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>