force-app/main/default/objects/Charge_Type__c/fields/Is_Contract_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Charge_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this charge available for contract charges?</description>
    <inlineHelpText>is this charge available for contract charges?</inlineHelpText>
    <label>Is Contract Charge Type</label>
    <type>Checkbox</type>
</CustomField>