force-app/main/default/objects/Charge_Type__c/fields/Safari_Name__c.field-meta.xml
<CustomField>
    <fullName>Safari_Name__c</fullName>
    <label>Safari Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>