force-app/main/default/objects/Charge_Type__c/fields/Type_Tag__c.field-meta.xml
<CustomField>
    <fullName>Type_Tag__c</fullName>
    <description>unique type tag across safari databases</description>
    <label>Type Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>